# ImobiManager

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json  payload_test.json
backend/: .dockerignore  .env.example  Dockerfile  entrypoint.prod.sh  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 156e1646c9cd_create_renter_documents_table.py  4ae7f281a996_create_contracts_table.py  5573304d87a1_create_bot_tokens_and_bot_message_logs_tables.py  6b908c1fa526_add_payment_day_to_contracts.py  9a5c1df5395f_create_contract_templates_table.py  9e298b75af78_create_renters_table.py  a1fb0332ce9d_create_users_and_user_owners_tables.py  a770ded279e5_change_content_column_from_jsonb_to_json.py  bf7c9033fbc3_create_owner_documents_table.py  ea6e3df05e6e_create_addresses_table.py  ebcf795d4749_create_owner_renters_table.py  f7e2c4b0d1a9_consolidate_contract_file_paths.py  fb663b489212_create_owners_table.py
backend/app/: main.py
backend/app/cli/: __main__.py  main.py
backend/app/core/: auth.py  config.py  document_validation.py  filenames.py  masking.py  security.py
backend/app/db/: session.py
backend/app/mcp/: __init__.py  server.py
backend/app/models/: address.py  base.py  bot_message_log.py  bot_token.py  contract.py  contract_template.py  enums.py  owner.py  owner_document.py  owner_renter.py  renter.py  renter_document.py  user.py  user_owner.py
backend/app/schemas/: address.py  auth.py  bot.py  contract.py  contract_template.py  document_schemas.py  owner.py  owner_document.py  renter.py  renter_document.py  revenue_timeline.py
backend/app/services/: _document_base.py  address_service.py  auth_service.py  bot_message_log_service.py  bot_token_service.py  contract_pdf_service.py  contract_service.py  owner_document_service.py  owner_service.py  renter_document_service.py  renter_service.py  revenue_timeline_service.py  user_service.py
backend/app/tests/: conftest.py  test_addresses.py  test_auth.py  test_contract_formatters.py  test_contract_pdf.py  test_contract_pdf_service.py  test_contract_renderer.py  test_contract_templates.py  test_contracts.py  test_health.py  test_owner_documents.py  test_owners.py  test_renters.py  (+3 more)
backend/contract_generator_test/: doc_content.json  doc_style.json  formatters.py  generate_contract.py  num_string_conversion_params.json  render_pdf.py
backend/db/: schema.dbdiagram  schema.dbml
backend/schema/: schema.dbdiagram  schema.dbml
bot/: .env.example  Dockerfile  README.md  pyproject.toml
bot/app/: config.py  main.py  router.py
(+198 files in other folders)
