[project]
name = "imobimanager-backend"
version = "0.1.0"
description = "ImobiManager FastAPI backend"
requires-python = "==3.14.*"
dependencies = [
    "fastapi>=0.139,<0.140",
    "uvicorn[standard]>=0.49,<0.50",
    "pydantic-settings>=2.14,<3",
    "sqlalchemy[asyncio]>=2.0,<2.1",
    "asyncpg>=0.31,<0.32",
    "alembic>=1.18,<1.19",
]

[dependency-groups]
dev = [
    "pytest>=9,<10",
    "pytest-asyncio>=1.4,<2",
    "httpx>=0.28,<0.29",
    "ruff>=0.15,<0.16",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.ruff.lint.per-file-ignores]
"app/tests/*" = ["S101"]
"app/api/**" = ["B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app/tests"]